Migrated from Spring MVC to Spring boot and implemented OAuth